updates url in config and adds generic meta image

--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: This American Life
 description: Listen to your favorite movies
-url: "https://tal.eliduke.com"
+url: "https://thisamericanlife.co"
 assets: "https://thisamericanlife.b-cdn.net"
 
 collections:
