meta tag refactor

--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: This American Life
-description: Listen to your favorite movies
+description: A fan edit of thisamericanlife.org
 url: "https://thisamericanlife.co"
 assets: "https://thisamericanlife.b-cdn.net"
 
