better og image and other meta tags

--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: This American Life
-description: This site is a fan edit of thisamericanlife.org
+description: a fan edit of thisamericanlife.org
 url: "https://thisamericanlife.co"
 assets: "https://assets.thisamericanlife.co"
 
