--- a/.github/workflows/ruby.yml
+++ b/.github/workflows/ruby.yml
@@ -5,12 +5,12 @@
 # This workflow will download a prebuilt Ruby version, install dependencies and run tests with Rake
 # For more information see: https://github.com/marketplace/actions/setup-ruby-jruby-and-truffleruby
 
-name: Ruby
+name: Import new episode
 
 on:
   workflow_dispatch:
   schedule:
-    - cron: 5 23 * * SUN
+    - cron: 0 18 * * SUN
 
 permissions:
   contents: write
