--- a/.github/workflows/ruby.yml
+++ b/.github/workflows/ruby.yml
@@ -35,3 +35,5 @@ jobs:
       uses: stefanzweifel/git-auto-commit-action@v5.0.0
       with:
         commit_message: Cron job episode import
+  deploy:
+    uses: ./.github/workflows/jekyll.yml
