another stab at import -> deploy workflow config

--- a/.github/workflows/ruby.yml
+++ b/.github/workflows/ruby.yml
@@ -31,4 +31,5 @@ jobs:
       with:
         commit_message: Cron job episode import
   deploy:
+    needs: import
     uses: ./.github/workflows/jekyll.yml
