--- a/.github/workflows/ruby.yml
+++ b/.github/workflows/ruby.yml
@@ -26,10 +26,8 @@ jobs:
         BUNNY_API_KEY: ${{ secrets.BUNNY_API_KEY }}
         BUNNY_ACCESS_KEY: ${{ secrets.BUNNY_ACCESS_KEY }}
       run: bundle exec ruby import.rb
-    - name: Automatic Episode Import
+    - name: Commit changes (usually just 1 new file in /_episodes)
       uses: stefanzweifel/git-auto-commit-action@v5.0.0
       with:
         commit_message: Cron job episode import
-  deploy:
-    needs: import
-    uses: ./.github/workflows/jekyll.yml
+        github_token: ${{ secrets.WORKFLOW_PAT }}
