--- a/.github/workflows/ruby.yml
+++ b/.github/workflows/ruby.yml
@@ -18,9 +18,7 @@ jobs:
       uses: actions/checkout@v4
     - name: Set up Ruby
       uses: ruby/setup-ruby@v1
-      with:
-        bundler-cache: true
-        cache-version: 0
+      run: bundle install
     - name: Import new episode
       env:
         BUNNY_API_KEY: ${{ secrets.BUNNY_API_KEY }}
